@@ -1,3 +1,4 @@
+* #5080: add a "copy to clipboard" palette for URL's (cassidy)
 * Updated translations: fr, es, el, de, ar (pootle)
 
 28
